<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.dudarenka.vitali.guestbooktestapp.presentation.screen.guestbook.registration.RegistrationViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/registration"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="105dp"
            android:layout_height="22dp"
            android:layout_marginStart="24dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameEditText" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="105dp"
            android:layout_height="22dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toTopOf="@+id/passwordEditText" />

        <TextView
            android:id="@+id/password2TextView"
            android:layout_width="105dp"
            android:layout_height="22dp"
            android:text="@string/password2"
            app:layout_constraintStart_toStartOf="@+id/passwordTextView"
            app:layout_constraintTop_toTopOf="@+id/password2EditText" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="105dp"
            android:layout_height="22dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/password2TextView"
            app:layout_constraintTop_toTopOf="@+id/emailEditText" />

        <TextView
            android:id="@+id/avaImageTextView"
            android:layout_width="105dp"
            android:layout_height="22dp"
            android:text="@string/avatarImage"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            app:layout_constraintTop_toTopOf="@+id/imageSetButton" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@={viewModel.name}"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/passwordTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/password2EditText"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:text="@={viewModel.password2}"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/password2TextView"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@+id/password2EditText" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="44dp"
            android:onClick="@{() -> viewModel.onClickSave()}"
            android:text="@string/go"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/imageSetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/chooseImage"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="@+id/imageSetButton"
            app:layout_constraintTop_toBottomOf="@+id/imageSetButton" />
    </android.support.constraint.ConstraintLayout>
</layout>